plugins {
    id 'java-library'
    id 'jacoco'
    id 'maven-publish'
    id 'info.solidsoft.pitest' version '1.19.0'
}

group = 'io.thymekit'
version = '0.3.0'

java {
    withSourcesJar()
    withJavadocJar()
}

// Build with any JDK 21 or newer; the artefact always targets 21. A library that demands the newest
// JVM is a library nobody can add — Spring Boot 4 itself runs from 17 upwards.

tasks.withType(JavaCompile).configureEach {
    options.release = 21
    options.compilerArgs << '-parameters'   // parameter names in the jar: Spring reads them for SpEL and injection
    options.encoding = 'UTF-8'
}

// Javadoc is kept as a defect detector, not as a tag counter: broken links and malformed HTML fail
// the build, while "no @param" on a method whose javadoc already says what it means does not. The
// documentation here explains meaning; repeating the signature in tags would only add noise.
tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:all,-missing', '-quiet')
}

// The configuration processor reads META-INF/additional-spring-configuration-metadata.json off the
// compile classpath, and the classpath carries it only after processResources has copied it there.
// Without this line a clean build compiles first, the processor finds nothing to merge and the kit
// publishes no metadata at all — invisible locally, because the second build finds the file the first
// one left behind, and red on every clean checkout.
tasks.named('compileJava') {
    inputs.files(tasks.named('processResources'))
}

// The run that judges a commit, and the only green that means anything: it deletes what the last run
// left before it starts. A build that is only ever incremental cannot say what it produces from an
// empty directory — which is how the jar came to ship without its configuration metadata while every
// local run stayed green over a file an earlier build had left behind.
tasks.register('verify') {
    group = 'verification'
    description = 'Clean build, tests and the mutation gate: the run that judges a commit.'
    dependsOn 'clean', 'build', 'pitest'
}

// dependsOn does not order, it only requires; without this the delete can land in the middle.
tasks.matching { it.name != 'clean' }.configureEach { mustRunAfter tasks.named('clean') }

repositories { mavenCentral() }

dependencies {
    // Versions come from the Boot BOM, so the kit stays on one line with its consumers.
    api platform('org.springframework.boot:spring-boot-dependencies:4.1.0')

    // markdown: the #md dialect and XSS-safe rendering; thymeleaf is api because the dialect
    // extends its types and is therefore visible to consumers
    api 'org.thymeleaf:thymeleaf'
    implementation 'com.vladsch.flexmark:flexmark:0.64.8'
    implementation 'com.vladsch.flexmark:flexmark-ext-tables:0.64.8'
    implementation 'com.vladsch.flexmark:flexmark-ext-autolink:0.64.8'
    implementation 'org.jsoup:jsoup:1.23.1'

    // Spring is optional at compile time: @Cacheable on the renderer is a no-op without it,
    // and org.springframework.ui.Model is only needed by Spring consumers
    compileOnly 'org.springframework:spring-context'
    compileOnly 'org.jspecify:jspecify:1.0.1'
    // auto-configuration, so the kit works right after the dependency is added; compileOnly keeps
    // Boot off the classpath of those who do not use it
    compileOnly 'org.springframework.boot:spring-boot-autoconfigure'
    // turns META-INF/additional-spring-configuration-metadata.json into the metadata an ide reads, so
    // the one switch this kit has is described where a consumer types it. The platform is repeated
    // here because a bom does not reach the annotation processor path by itself
    annotationProcessor platform('org.springframework.boot:spring-boot-dependencies:4.1.0')
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    testImplementation platform('org.junit:junit-bom:6.1.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'   // canon as code: the rules this kit keeps
    testImplementation 'org.jspecify:jspecify:1.0.1'
    testImplementation 'org.springframework:spring-context'   // ExtendedModelMap for canvas unit tests
    testImplementation 'org.thymeleaf:thymeleaf-spring6'      // render pins with the same expression engine consumers use
    testImplementation 'org.springframework.boot:spring-boot-autoconfigure'
    testImplementation 'org.springframework.boot:spring-boot-test'   // ApplicationContextRunner for auto-configuration pins
    testImplementation 'org.springframework:spring-test'             // servlet doubles: the showcase snapshot renders through a web context
    testImplementation 'org.springframework:spring-web'
    testImplementation 'jakarta.servlet:jakarta.servlet-api'
}

test {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

jacocoTestReport {
    dependsOn tasks.named('test')
    reports { xml.required = true; html.required = true }
}

// Mutation testing (opt-in: `./gradlew pitest`); the module contract is 100%. One class at a time
// with -PpitTarget=io.thymekit.Rel -PpitTests=io.thymekit.RelTest, which is how a class is taken
// through its own spec while the rest of the project is still on its way there.
pitest {
    junit5PluginVersion = '1.2.2'
    targetClasses = (project.findProperty('pitTarget')?.toString() ?: 'io.thymekit.*').split(',') as List
    // both accept a comma-separated list: a class taken through the method may be described by
    // several spec files, one per job it does
    targetTests   = (project.findProperty('pitTests')?.toString() ?: 'io.thymekit.*').split(',') as List
    outputFormats = ['HTML', 'XML']
    timestampedReports = false
    threads = 2
    mutationThreshold = (project.findProperty('pitThreshold')?.toString()?.toInteger() ?: 100)
}

publishing {
    // GitHub Packages. Note for consumers: even a public package there requires authentication —
    // a GitHub username and a token with read:packages. Maven Central, where no such thing is
    // needed, comes when the namespace io.thymekit is verified.
    repositories {
        maven {
            name = 'GitHubPackages'
            url = 'https://maven.pkg.github.com/thymekit/thymekit'
            credentials {
                username = System.getenv('GITHUB_ACTOR')
                password = System.getenv('GITHUB_TOKEN')
            }
        }
    }

    publications {
        maven(MavenPublication) {
            from components.java
            pom {
                name = 'thymekit'
                description = 'Domain-agnostic interface elements for Spring Boot and Thymeleaf: pages composed in typed Java, rendered as clean semantic HTML.'
                url = 'https://github.com/thymekit/thymekit'
                licenses {
                    license {
                        name = 'Mozilla Public License 2.0'
                        url = 'https://www.mozilla.org/MPL/2.0/'
                    }
                }
                scm {
                    url = 'https://github.com/thymekit/thymekit'
                    connection = 'scm:git:https://github.com/thymekit/thymekit.git'
                }
            }
        }
    }
}
